# PlatePerfect

./: README.md
App integrated with the model/: downloaded_image_input_paths.txt  menu_imgs.py  post_training.py  pyproject.toml  test.py
App integrated with the model/runs/segment/train2/: args.yaml
App integrated with the model/runs/segment/train3/: args.yaml
Data preprocessing/: 16687.txt  25.txt  Datapreprocessing.ipynb  category.txt
Data preprocessing/.ipynb_checkpoints/: Mask to polygon-checkpoint.ipynb
Final-Model/: Post training.ipynb  Train.ipynb
Final-Model/runs/segment/train/: args.yaml
Final-Model/runs/segment/train2/: events.out.tfevents.1701036281.19b39368693e.1729.0
Final-Model/runs/segment/train3/: results.csv
Finetuned Model/: Functions.py  Menu.py  config.yaml  post_training.py
Finetuned Model/runs/segment/train/: results.csv
Project final edits with App/dtplc/: Functions.py  Menu.py  downloaded_image_outpath_paths.txt  rc.py
Project final edits with App/dtplc/runs/segment/train2/: results.csv
